--- a/web/confirmacionCurso.xhtml
+++ b/web/confirmacionCurso.xhtml
@@ -19,9 +19,9 @@
                 <h:outputText value="#{registroBeanCurso.curso}" />
                 
                 <h:outputText value=""/>
-                <h:commandLink action="inscripcion" value="Retornar al formulario" />
+                <br><h:commandButton action="inscripcion" value="Retornar al formulario"></h:commandButton></br>
                 <h:outputText value=""/>
-                <h:commandLink action="index" value="Retornar al menu" />
+                <br><h:commandButton action="index" value="Retornar al menu"></h:commandButton></br>
             </h:panelGrid>
         </h:form>
     </h:body>
