--- a/web/confirmacionProd.xhtml
+++ b/web/confirmacionProd.xhtml
@@ -18,9 +18,9 @@
                 <h:outputText value="Precio:" />
                 <h:outputText value="#{registroBeanProd.precio}" />
                 <h:outputLabel value=""/>
-                <h:commandLink action="regProductos" value="Retornar al formulario" />
+                <br><h:commandButton action="regProductos" value="Retornar al formulario"></h:commandButton></br>
                 <h:outputLabel value=""/>
-                <h:commandLink action="index" value="Retornar al menu" />
+                <br><h:commandButton action="index" value="Retornar al menu"></h:commandButton></br>
             </h:panelGrid>
         </h:form>
     </h:body>
