--- a/web/confirmacionUsuario.xhtml
+++ b/web/confirmacionUsuario.xhtml
@@ -18,9 +18,11 @@
                 <h:outputText value="Contraseña" />
                 <h:outputText value="#{registroBeanUsuario.contraseña}" />
                 <h:outputLabel value=""/>
-                <h:commandLink action="regUsuario" value="Retornar al formulario" />
+                <br><h:commandButton action="regUsuario" value="Retornar al formulario"></h:commandButton></br>
+                <h:outputText value=""/>
+                <br><h:commandButton action="index" value="Retornar al menu"></h:commandButton></br>
                 <h:outputLabel value=""/>
-                <h:commandLink action="index" value="Retornar al menu" />
+               
             </h:panelGrid>
         </h:form>
     </h:body>
