--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -11,10 +11,10 @@
             <h:panelGrid columns="1" >
               <h2 >Menu de opciones</h2>
                 <h:panelGroup>
-                        <br><h:commandButton action="inscripcion" value="inscripcion al curso"></h:commandButton></br>
-                        <br><h:commandButton action="regUsuario" value="registro del usuarios"></h:commandButton></br>
-                        <br><h:commandButton action="regProductos" value="degistro de  los productos"></h:commandButton></br>
-                        <br><h:commandButton action="regLibros" value="registro de los libros"></h:commandButton></br>
+                    <br><h:commandButton action="regUsuario" value="registro del usuarios"></h:commandButton></br>
+                    <br><h:commandButton action="inscripcion" value="inscripcion al curso"></h:commandButton></br>
+                    <br><h:commandButton action="regLibros" value="registro de los libros"></h:commandButton></br>
+                    <br><h:commandButton action="regProductos" value="registro de  los productos"></h:commandButton></br>
                 </h:panelGroup>                      
             </h:panelGrid>
             </div>
