--- a/web/confirmacionLibros.xhtml
+++ b/web/confirmacionLibros.xhtml
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html">
     <h:head>
-        <title>Facelet Title</title>
+        <title>registro</title>
     </h:head>
     <h:body>
         <h2>Registro de libro</h2>
@@ -18,9 +18,10 @@
                 <h:outputText value="Medio:" />
                 <h:outputText value="#{registroBeanLibro.medio}" />
                 <h:outputLabel value=""/>
-                <h:commandLink action="regLibros" value="Retornar al formulario" />
+                <br><h:commandButton action="regLibros" value="Retornar al formulario"></h:commandButton></br>
+                <h:outputText value=""/>
+                <br><h:commandButton action="index" value="Retornar al menu"></h:commandButton></br>
                 <h:outputLabel value=""/>
-                <h:commandLink action="index" value="Retornar al menu" />
             </h:panelGrid>
         </h:form>
     </h:body>
