--- a/web/regLibros.xhtml
+++ b/web/regLibros.xhtml
@@ -3,11 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
-    <h:head>
-        <title>Registro</title>
-    </h:head>
-    <h:body>
-        <h1>Registro de libros</h1>
+    <h:head><title>Registro</title></h:head>
+    <h:body><h1>Registro de libros</h1>
         <h:form>
             <h:panelGrid columns="3" columnClasses="alinder,alinizq,alinizq" >
                 <h:outputLabel value="Titulo" for="titulo" />
@@ -17,18 +14,17 @@
                 <h:inputText id="autor" label="Autor" required="true" value="#{registroBeanLibro.autor}" />
                 <h:message for="autor" />
                 <h:outputLabel value="Resumen" for="resumen" />
-                <h:inputTextarea id="resumen" label="Resumen" required="true" value="#{registroBeanLibro.resumen}"
-                                 cols="30" rows="5" />              
+                <h:inputTextarea id="resumen" label="Resumen" required="true" value="#{registroBeanLibro.resumen}" cols="30" rows="5" />              
                 <h:message for="resumen" />
                 <h:outputLabel value="Medio" for="medio" />
                 <h:selectOneRadio id="medio" label="Medio" required="true" value="#{registroBeanLibro.medio}">
                     <f:selectItem itemValue="Fisico" itemLabel="Fisico"/>
-                    <f:selectItem itemValue="Virtual" itemLabel="Virtual" />
+                    <f:selectItem itemValue="virtual" itemLabel="virtual" />
                 </h:selectOneRadio>
                 <h:message for="medio"/>
                 <h:panelGroup />
-                <h:commandButton id="registro" value="Enviar" action="confirmacionLibros" />  
-                
+                <h:commandButton id="registro" value="Enviar" action="confirmacionLibros" />               
+
             </h:panelGrid>
         </h:form>
         <h:form><br><h:commandButton action="index" value="Volver" /></br></h:form>
