--- a/web/regProductos.xhtml
+++ b/web/regProductos.xhtml
@@ -1,13 +1,8 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
-    <h:head>
-        <title>Registro</title>
-    </h:head>
-    <h:body>
-        <h1>Registro de productos</h1>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:f="http://xmlns.jcp.org/jsf/core">
+    <h:head> <title>Registro</title></h:head>
+    <h:body><h1>Registro de productos</h1>
         <h:form>
             <h:panelGrid columns="3"  >
                 <h:outputLabel value="Producto" for="producto" />
